--- a/README
+++ b/README
@@ -1,20 +1,4 @@
 sowm
 
-----------------------------------------------------
-|                                                  |
-|                                                  |
-|                                                  |
-|                                                  |
-|                                                  |
-|                                                  |
-|                                                  |
-|                                                  |
-|                                                  |
-|                                                  |
-|                                                  |
-|                                                  |
-|                                                  |
-|                                                  |
-|                                                  |
-|
-----------------------------------------------------
+
+window manager which is build diffrent
