--- a/todo
+++ b/todo
@@ -1,4 +1,8 @@
 SOWM 
 
+==========================================================
 lemonbar config that has shows  workspaces and is cool asf 
-keybinds --> shxkd 
+
+
+===========================================================
+keybinds --> shxkd (partially done)
